--- a/catalogo_app/templates/catalogo_app/catalogo.html
+++ b/catalogo_app/templates/catalogo_app/catalogo.html
@@ -1,62 +1,142 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Catalogo</title>
-</head>
-
-<body>
-    {% include 'nav.html' %}
-    <div class="flex">
-        <aside class="hidden md:block w-64 bg-white p-6">
-            <h2 class="font-bold text-lg mb-4">Categorías</h2>
-            <ul>
-                {% for categoria in categorias %}
-                <li class="cursor-pointer p-2 hover:bg-gray-100">
-                    <a href="{% url 'productCat' categoria.id %}">{{ categoria.nombre }}</a>
-                </li>
-                {% endfor %}
-                <li class="cursor-pointer p-2 hover:bg-gray-100">
-                    <a href="{% url 'catalogo' %}">Todos los Productos</a>
-                </li>
-            </ul>
-        </aside>
-
-        <main class="flex-1 p-6">
-            <h2 class="text-2xl font-bold mb-6">Productos</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-                {% for producto in productos %}
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <!-- Verificar si el producto tiene una imagen -->
-                    {% if producto.imagen %}
-                    <div class="w-full h-48 overflow-hidden">
-                        <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" class="w-full h-full object-cover" />
-                    </div>
-                    {% else %}
-                    <div class="w-full h-full overflow-hidden">
-                        <img src="{% static 'images/default-product-image.jpg' %}" alt="Imagen por defecto" class="w-full h-full object-cover" />
-                    </div>
-                    {% endif %}
-
-                    <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">{{ producto.nombre }}</h3>
-                        <p class="text-gray-600">{{ producto.categoria }}</p>
-                        <p class="text-blue-600 font-bold mt-2 mb-4">${{ producto.precio }}</p>
-                        <a href="{% url 'agregar_al_carrito' producto.id %}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-center mt-1">
-                            Añadir al carrito
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="icon"
+              type="image/svg+xml"
+              href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+              rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.tailwindcss.com"></script>
+        <title>Catalogo</title>
+    </head>
+    <body>
+        {% include 'nav.html' %}
+        <div class="flex">
+            <aside class="hidden md:block w-64 p-6 shadow-lg bg-white border-r-[1px]">
+                <h2 class="font-bold text-base mb-4 text-start">Navegación</h2>
+                <ul class="mb-6">
+                    <li>
+                        <a href="{% url 'catalogo' %}"
+                           class="flex items-center p-2 text-zinc-700 hover:text-blue-500 transition-all duration-300 text-sm">
+                            Todos los Productos
                         </a>
+                    </li>
+                </ul>
+                <h2 class="font-bold text-base mb-4">Categorías</h2>
+                <ul class="mb-6">
+                    {% for categoria in categorias %}
+                        <li class="mb-2">
+                            <a href="{% url 'productCat' categoria.id %}"
+                               class="flex items-center p-2 text-zinc-700 hover:text-blue-500 transition-all duration-300 text-sm">
+                                {{ categoria.nombre }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <h2 class="font-bold text-base mb-4">Filtrar por Precio</h2>
+                <form action="{% url 'catalogo' %}" method="GET" class="space-y-2">
+                    <div>
+                        <label for="min_price" class="block text-sm text-zinc-700">Precio Mínimo:</label>
+                        <input type="number"
+                               name="min_price"
+                               id="min_price"
+                               class="w-full p-2 border rounded"
+                               placeholder="0"
+                               min="0"
+                               value="{{ min_price|default:'' }}">
+                    </div>
+                    <div>
+                        <label for="max_price" class="block text-sm text-zinc-700">Precio Máximo:</label>
+                        <input type="number"
+                               name="max_price"
+                               id="max_price"
+                               class="w-full p-2 border rounded"
+                               placeholder="1000"
+                               min="0"
+                               value="{{ max_price|default:'' }}">
+                    </div>
+                    <button type="submit"
+                            class="w-full mt-2 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
+                        Filtrar <i class="pl-2 fa-solid fa-filter"></i>
+                    </button>
+                </form>
+                <form action="{% url 'catalogo' %}" method="GET" class="flex items-center">
+                    <input type="hidden" name="min_price" value="">
+                    <input type="hidden" name="max_price" value="">
+                    <button type="submit"
+                            class="w-full px-4 py-2 text-red-500 hover:text-red-400 transition-colors mt-2">
+                        Resetear Filtros <i class="pl-2 fa-solid fa-filter-circle-xmark"></i>
+                    </button>
+                </form>
+            </aside>
+            <main class="flex-1 p-6">
+                <h2 class="text-2xl font-bold mb-6">Productos</h2>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                    {% for producto in productos %}
+                        <div class="bg-white rounded-lg shadow-md flex flex-col p-6 group hover:shadow-lg transition-shadow duration-300 h-full">
+                            {% if producto.imagen %}
+                                <img src="{{ producto.imagen.url }}"
+                                     alt="{{ producto.nombre }}"
+                                     class="w-full h-48 {% comment %} h-auto {% endcomment %} object-cover rounded-lg mb-4 group-hover:scale-105 transition-transform duration-300" />
+                            {% else %}
+                                <img src="{% static 'images/default-product-image.jpg' %}"
+                                     alt="Imagen por defecto"
+                                     class="w-full h-auto object-cover rounded-lg mb-4 group-hover:scale-105 transition-transform duration-300" />
+                            {% endif %}
+                            <h3 class="text-2xl font-bold mb-2">{{ producto.nombre }}</h3>
+                            <p class="text-gray-600 mb-4">{{ producto.categoria }}</p>
+                            <div class="flex justify-between items-center mt-auto">
+                                <span class="text-2xl font-bold">${{ producto.precio }}</span>
+                                <a href="{% if user.is_authenticated %}{% url 'agregar_al_carrito' producto.id %}{% else %}{% url 'login' %}?next={% url 'catalogo' %}{% endif %}"
+                                   class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">Comprar</a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <!-- Controles de paginación -->
+                <div class="mt-6 sm:flex justify-between items-center">
+                    <span class="text-gray-600">Página {{ productos.number }} de {{ productos.paginator.num_pages }}</span>
+                    <div class="flex justify-center mt-4">
+                        {% if productosPrimera.has_previous %}
+                            <a href="?page=1" class="px-4 py-2 text-blue-500 hover:text-blue-700"><i class="fa-solid fa-angles-left"></i></a>
+                            <a href="?page={{ productos.previous_page_number }}"
+                               class="px-4 py-2 text-blue-500 hover:text-blue-700"><i class="fa-solid fa-angle-left"></i></a>
+                        {% endif %}
+                        {% for num in productos.paginator.page_range %}
+                            {% if num == productos.number %}
+                                <span class="px-4 py-2 bg-blue-500 text-white rounded">{{ num }}</span>
+                            {% else %}
+                                <a href="?page={{ num }}"
+                                   class="px-4 py-2 text-blue-500 hover:text-blue-700">{{ num }}</a>
+                            {% endif %}
+                        {% endfor %}
+                        {% if productos.has_next %}
+                            <a href="?page={{ productos.next_page_number }}"
+                               class="px-4 py-2 text-blue-500 hover:text-blue-700"><i class="fa-solid fa-angle-right"></i></a>
+                            <a href="?page={{ productos.paginator.num_pages }}"
+                               class="px-4 py-2 text-blue-500 hover:text-blue-700"><i class="fa-solid fa-angles-right"></i></a>
+                        {% endif %}
                     </div>
                 </div>
-                {% endfor %}
-            </div>
-        </main>
-    </div>
-</body>
-
+            </main>
+        </div>
+    </body>
 </html>
+<script>
+    // Evitar el envío del formulario al presionar "Enter"
+    document.getElementById('min_price').addEventListener('keypress', function(event) {
+        if (event.key === 'Enter') {
+            event.preventDefault();
+        }
+    });
+
+    document.getElementById('max_price').addEventListener('keypress', function(event) {
+        if (event.key === 'Enter') {
+            event.preventDefault();
+        }
+    });
+</script>
