fix: arreglo de boton comprar en card de producto en home

--- a/templates/home.html
+++ b/templates/home.html
@@ -128,9 +128,9 @@
               </p>
               <div class="flex justify-between items-center">
                 <span class="text-2xl font-bold">$45.500,00</span>
-                <button class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
+                <a href="{% url 'catalogo' %}" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
                   Comprar
-                </button>
+                </a>
               </div>
             </div>
       
@@ -142,9 +142,9 @@
               </p>
               <div class="flex justify-between items-center">
                 <span class="text-2xl font-bold">$1.000.000,00</span>
-                <button class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
+                <a href="{% url 'catalogo' %}"  class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
                   Comprar
-                </button>
+                </a>
               </div>
             </div>
       
@@ -154,9 +154,9 @@
               <p class="text-gray-600 mb-4">Sumérgete en tu música favorita</p>
               <div class="flex justify-between items-center">
                 <span class="text-2xl font-bold">$78.000,00</span>
-                <button class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
+                <a href="{% url 'catalogo' %}" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
                   Comprar
-                </button>
+                </a>
               </div>
             </div>
           </div>
